<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_repo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/line"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="13dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title_name"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorGray80"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="14sp"
                android:text="@string/description_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_device"/>

                <TextView
                    android:id="@+id/tv_forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorOrange"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="68"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_stars"/>

                <TextView
                    android:id="@+id/tv_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorOrange"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="364"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right">

        <ImageView
            android:id="@+id/iv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginRight="19dp"
            android:src="@mipmap/ic_account"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/tv_completename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorGray80"
            android:textSize="12sp"
            android:text="@string/completename"/>



        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>